@@ -272,6 +272,12 @@ plugin.tx_icsoddatastore_pi1{
 			wrap = <p class="label owner">|</p>
 		}
 	}
+	
+	displaySearch {
+		tiers =
+		formats =		
+	}
+	
 
 
 #Default styles	
@@ -426,7 +432,6 @@ div.tx_icsoddatastore_pi1_fileformatItem {
 div.tx_icsoddatastore_pi1_fileformatBlock {
 	float:left;
 	width:100%;
-	/*height:6em;*/
 	height:5em;
 }
 
@@ -452,10 +457,6 @@ h3.tx_icsoddatastore_pi1_keywords {
 }
 
 div.tx_icsoddatastore_pi1_keywords {
-	/*
-	height:4.5em;
-	padding:0.25em 1em 0.25em 0em;
-	*/
 	height:4em;
 }
 
@@ -473,7 +474,8 @@ div.tx-icsoddatastore-pi1 .button {
 
 h3.tx_icsoddatastore_pi1_titleFileType,
 h3.tx_icsoddatastore_pi1_titleTiers,
-h3.tx_icsoddatastore_pi1_keywords {
+h3.tx_icsoddatastore_pi1_keywords,
+h3.tx_icsoddatastore_pi1_sc_title {
 	margin-bottom:0.25em;
 	font-size:0.8em;
 	color:#68B0BA;
@@ -519,6 +521,14 @@ a.tx_icsoddatastore_pi1_sortImg {
 div.tx_icsoddatastore_pi1_rss {
 	float: right; 
 	margin-top: -2.5em;
+}
+
+p.tx_icsoddatastore_pi1_sc_label {
+	font-style: italic;
+}
+
+p.tx_icsoddatastore_pi1_sc_value {
+	font-weight: bold;
 }
 
 /* For ratings */
