@@ -48,8 +48,35 @@
 		</div>
 	</form>
 </div>
+###SELECTED_CRITERIA###
 <!-- ###TEMPLATE_SEARCH### end -->
 
+
+
+
+<!-- ###TEMPLATE_SELECTED_CRITERIA### start-->
+	<div class="###PREFIXID###_selectedCriteria">
+		<h3 class="###PREFIXID###_sc_title">###SC_TITLE###</h3>
+		<!-- ###SUBPART_SC_KEYWORDS### start-->
+		<div class="###PREFIXID###_sc_keywords">
+			<p class="###PREFIXID###_sc_label">###SC_KEYWORDS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_KEYWORDS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_KEYWORDS### end-->
+		<!-- ###SUBPART_SC_TIERS### start-->
+		<div class="###PREFIXID###_sc_tiers">
+			<p class="###PREFIXID###_sc_label">###SC_TIERS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_TIERS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_TIERS### end-->
+		<!-- ###SUBPART_SC_FORMATS### start-->
+		<div class="###PREFIXID###_sc_formats">
+			<p class="###PREFIXID###_sc_label">###SC_FORMATS_LABEL###</p>
+			<p class="###PREFIXID###_sc_value">###SC_FORMATS_VALUE###</p>
+		</div>
+		<!-- ###SUBPART_SC_FORMATS### end-->
+	</div>
+<!-- ###TEMPLATE_SELECTED_CRITERIA### end-->
 
 
 
